Ajustes de estilo menores
Espacio de columnas

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -62,3 +62,9 @@
 .myInput{
   background-color: rgb(241, 238, 238);
 }
+
+/*--Trabajo en equipo CSS--*/
+.btn-margin{
+  margin-bottom: 1em;
+}
+/*--Trabajo en equipo CSS--*/
